chronogallery/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chronogallery
  labels:
    app: chronogallery
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: chronogallery
